2007-11-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([UIxMailPartHTMLViewer -_attachmentIds]): the reference was one
	character too short, which cause the images not to be displayed
	sometimes and crashes to happen whenever the references on a
	message were wrong (due to bugs in SOPE).

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView
	-hasMessageAttachment]): consider an attachment any content that
	has a non-nil disposition.

	* SoObjects/SOGo/SOGoParentFolder.m ([SOGoParentFolder
	-newFolderWithName:nameandNameInContainer:newNameInContainer]):
	fixed method to make use of the parameters instead of the useless
	remains that weren't even initialized.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -saveContentString:_iCalbaseSequence:_v]):
	don't propagate the event among the attendees if this is not an
	"so" request.
	([SOGoAppointmentObject -deleteWithBaseSequence:]): same as above.

	* Main/SOGo.m ([SOGo -authenticatorInContext:context]): make use
	of the new category method below.

	* SoObjects/SOGo/WORequest+SOGo.m ([WORequest
	-handledByDefaultHandler]): new method that returns whether this
	is an "so" or alike request.

	* SoObjects/SOGo/WORequest+SOGo.[hm]: new category module.

	* SoObjects/SOGo/SOGoParentFolder.m ([SOGoParentFolder
	-newFolderWithName:nameandNameInContainer:newNameInContainer]):
	write the new folder's name in the folder cache.

	* UI/Scheduler/UIxCalendarSelector.m ([UIxCalendarSelector
	-calendars]): same as below.

	* UI/Contacts/UIxContactsListViewContainer.m
	([UIxContactsListViewContainer -currentContactFolderName]):
	translate the display name if its the default one.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -create]): overriden method that invokes
	its ancestor and then activate itself within the user settings.

	* SoObjects/SOGo/SOGoParentFolder.m ([SOGoParentFolder